dev/mock2/css/media-queries.css
@media screen and (max-width: 478px) 	{
    header h1, header h2 { text-align: center;}

	header h1 a { float: none; font-size: 36px; }
	header h2 { float: none; font-size: 18px; padding: 0;}

	body { font-size: 13px; }

	/* Give your nav elements that "blockie" look for mobile devices */
    nav {background: none; border: none; margin: 10px 0;}
	nav a { 
        width: 100%; 
        border: 1px solid #999999;
        -moz-border-radius: 4px;
        -webkit-border-radius: 4px;
        border-radius: 4px;
        /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#4d4d4d', endColorstr = '#000000');
        /*INNER ELEMENTS MUST NOT BREAK THIS ELEMENTS BOUNDARIES*/
        /*Element must have a height (not auto)*/
        /*All filters must be placed together*/
        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr = '#4d4d4d', endColorstr = '#000000')";
        /*Element must have a height (not auto)*/
        /*All filters must be placed together*/
        background-image: -moz-linear-gradient(top, #4d4d4d, #000000);
        background-image: -ms-linear-gradient(top, #4d4d4d, #000000);
        background-image: -o-linear-gradient(top, #4d4d4d, #000000);
        background-image: -webkit-gradient(linear, center top, center bottom, from(#4d4d4d), to(#000000));
        background-image: -webkit-linear-gradient(top, #4d4d4d, #000000);
        background-image: linear-gradient(top, #4d4d4d, #000000);
        -moz-background-clip: padding;
        -webkit-background-clip: padding-box;
        background-clip: padding-box;
        /*Use "background-clip: padding-box" when using rounded corners to avoid the gradient bleeding through the corners*/
        /*--IE9 WILL PLACE THE FILTER ON TOP OF THE ROUNDED CORNERS--*/
        text-align: center;
        padding: 0;
        
        /*border: solid 1px #cbcbcb; text-align: center; margin: 1px;*/
    }

	nav a:hover { background: #ebebeb; color: #414141;}

    #slideshow { 
        height: 120px;
    }

    #slideshow img {
        position: absolute;
        left: 50%;
        width: 96%;
        margin-left: -48%;
        height: auto;
    }

	#main-content, #sub-content { padding: 10px;}

    /************ ABOUT US ************/
    #about-img { float: none; display: block; margin: 10px auto;}
	.about-sig {font-size: 18px;}

    /************ SERVICES ************/
	.services-offered { margin: 10px; height: 370px; }
    .classes-offered {height: 170px}}

    img {width: 100%;}
}

@media screen and (max-width: 740px) 	{}

@media screen and (max-width: 480px) 	{}

